--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^5.0.0
   url_launcher: ^6.1.5
+  any_link_preview: ^2.0.9
 
 dev_dependencies:
   flutter_test:
