--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,5 +66,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/
+   - assets/images/
 
 
