--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   go_router: ^5.0.0
   url_launcher: ^6.1.5
   any_link_preview: ^2.0.9
+  animated_text_kit: ^4.2.2
+  google_fonts: ^3.0.1
+  flutter_animate: ^1.0.0
 
 dev_dependencies:
   flutter_test:
