--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   google_fonts: ^3.0.1
   flutter_animate: ^1.0.0
+  im_animations: ^0.1.2
 
 dev_dependencies:
   flutter_test:
