--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_animate: ^1.0.0
   im_animations: ^0.1.2
+  animate_it: ^0.0.1+2
 
 dev_dependencies:
   flutter_test:
