--- a/.github/workflows/host_on_github_pages.yml
+++ b/.github/workflows/host_on_github_pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.6'
+          flutter-version: '3.22.2'
           channel: 'stable'
       - run: flutter --version
 
@@ -48,7 +48,7 @@ jobs:
         run: flutter test
 
       - name: Build Web App
-        run: flutter build web
+        run: flutter build web --wasm
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
