chore: Update GitHub Actions workflow to use Melos for testing and add test script to melos.yaml

--- a/.github/workflows/host_on_github_pages.yml
+++ b/.github/workflows/host_on_github_pages.yml
@@ -38,7 +38,7 @@ jobs:
         run: melos lint
 
       - name: Run Test 🧪
-        run: flutter test
+        run: melos test
 
       - name: Build and Deploy to GitHub Pages 🚀
         uses: bluefireteam/flutter-gh-pages@v7
