--- a/.github/workflows/host_on_github_pages.yml
+++ b/.github/workflows/host_on_github_pages.yml
@@ -7,6 +7,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+env:
+  FLUTTER_VERSION: '3.27.3'
+  FLUTTER_HOME: '/opt/hostedtoolcache/flutter'
+
 
 jobs:
   build:
@@ -15,18 +19,16 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Set up Flutter 📦
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.27.3'
-          channel: 'stable'
-
       - name: Cache pub packages 🚚
         uses: actions/cache@v4
         with:
           path: ${{ env.FLUTTER_HOME }}/.pub-cache
-          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: ${{ runner.os }}-pub-
+          key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }}
+
+      - name: Set up Flutter 📦
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '${{ env.FLUTTER_VERSION }}'
 
       - name: Install dependencies 📥
         run: |
