--- a/.github/workflows/host_on_github_pages.yml
+++ b/.github/workflows/host_on_github_pages.yml
@@ -18,16 +18,16 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
+      - name: Cache pub packages 🚚
+        uses: actions/cache@v4
+        with:
+          path: "/opt/hostedtoolcache/flutter/stable-${{ env.FLUTTER_VERSION }}-x64"
+          key: ${{ runner.OS }}-flutter-install-cache-${{ env.FLUTTER_VERSION }}
+
       - name: Set up Flutter 📦
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '${{ env.FLUTTER_VERSION }}'
-
-      - name: Cache pub packages 🚚
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.FLUTTER_ROOT }}
-          key: ${{ runner.OS }}-flutter-install-cache-${{ env.FLUTTER_VERSION }}
 
       - name: Install dependencies 📥
         run: |
