chore: Update GitHub Actions workflow to change branch from 'main' to 'master'

--- a/.github/workflows/host_version.yml
+++ b/.github/workflows/host_version.yml
@@ -2,9 +2,7 @@ name: Deploy Flutter Web to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  release:
-    types: [ published ]
+    branches: [ master ]
   workflow_dispatch:
     inputs:
       version:
