--- a/.github/workflows/host_on_github_pages.yml
+++ b/.github/workflows/host_on_github_pages.yml
@@ -3,7 +3,7 @@ name: Host on GitHub Pages
 on:
   # Triggers the workflow on push on the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ release ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
