chore: Update GitHub Actions workflow to change branch from 'main' to 'master'

--- a/.github/workflows/host_version.yml
+++ b/.github/workflows/host_version.yml
@@ -2,7 +2,7 @@ name: Flutter Web Deploy with Versioning
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   release:
     types: [ created ]
   workflow_dispatch:
