--- a/.github/workflows/host_version.yml
+++ b/.github/workflows/host_version.yml
@@ -1,4 +1,4 @@
-name: Flutter Web Deploy with Melos
+name: Flutter Web Deploy with Versioning
 
 on:
   push:
@@ -12,20 +12,26 @@ on:
         required: false
         type: string
 
+env:
+  FLUTTER_VERSION: '3.27.3'
+  FLUTTER_CHANNEL: 'stable'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.3'
-          channel: 'stable'
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: ${{ env.FLUTTER_CHANNEL }}
           cache: true
 
       - name: Setup Melos
@@ -33,212 +39,174 @@ jobs:
           dart pub global activate melos
           melos bootstrap
 
-      - name: Extract version from portfolio package
-        id: get_version
-        if: github.event.inputs.version == ''
+      - name: Run tests and lint
         run: |
-          cd apps/ajay_portfolio
-          VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //')
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "Version extracted from ajay_portfolio package: $VERSION"
+          melos run lint
+          melos run test
 
-      - name: Set manual version
-        if: github.event.inputs.version != ''
+      - name: Extract version
+        id: version
         run: |
-          echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-          echo "Using manually provided version: ${{ github.event.inputs.version }}"
-
-      - name: Run tests
-        run: melos run test
-      
-      - name: Run lint
-        run: melos run lint
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          else
+            cd apps/ajay_portfolio
+            VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //')
+            echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          fi
 
       - name: Build Flutter Web
         run: |
           cd apps/ajay_portfolio
-          # Build for version directory
           flutter build web --release --base-href "/versions/${{ env.VERSION }}/"
-          # Build for root (same version)
-          mkdir -p build/web_root
-          cp -r build/web/* build/web_root/
-          cd build/web_root
-          find . -type f -name "*.html" -exec sed -i "s|/versions/${{ env.VERSION }}/|/|g" {} +
-      
-      - name: Deploy to GitHub Pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Configure Git
         run: |
-          mkdir -p tmp
-          cd tmp
-          
-          # Configure Git
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
+
+      - name: Deploy to GitHub Pages
+        run: |
           # Clone gh-pages branch
-          git clone --single-branch --branch gh-pages "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
+          git clone --single-branch --branch gh-pages "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages || {
+            # If branch doesn't exist, create it
+            git checkout --orphan gh-pages
+            git rm -rf .
+            mkdir -p versions
+            echo "# Versions Directory" > versions/README.md
+          }
+          
           cd gh-pages
           
           # Create versions directory if it doesn't exist
-          mkdir -p versions
-          
-          # Deploy version-specific build
           mkdir -p "versions/${{ env.VERSION }}"
-          cp -r ../../apps/ajay_portfolio/build/web/* "versions/${{ env.VERSION }}/"
           
-          # Deploy to root (latest version)
-          cp -r ../../apps/ajay_portfolio/build/web_root/* ./
+          # Copy new version
+          cp -r ../apps/ajay_portfolio/build/web/* "versions/${{ env.VERSION }}/"
           
-          # Get current UTC timestamp
-          DEPLOY_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          # Update versions index
+          cat > versions/index.html << EOL
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <title>Available Versions</title>
+              <style>
+                  :root {
+                      --primary-color: #2563eb;
+                      --background-color: #f8fafc;
+                      --text-color: #1e293b;
+                  }
+                  body {
+                      font-family: sans-serif;
+                      background-color: var(--background-color);
+                      color: var(--text-color);
+                      padding: 2rem;
+                  }
+                  .container {
+                      max-width: 800px;
+                      margin: auto;
+                      background: white;
+                      padding: 2rem;
+                      border-radius: 8px;
+                      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+                  }
+                  h1 { text-align: center; margin-bottom: 2rem; }
+                  table { 
+                      width: 100%; 
+                      border-collapse: collapse; 
+                      margin-top: 1rem;
+                  }
+                  th, td { 
+                      padding: 1rem; 
+                      text-align: left;
+                      border-bottom: 1px solid #e2e8f0;
+                  }
+                  th { 
+                      font-weight: 600;
+                      background-color: #f8fafc;
+                  }
+                  tr:hover { background-color: #f8fafc; }
+                  a { 
+                      color: var(--primary-color); 
+                      text-decoration: none;
+                  }
+                  a:hover { text-decoration: underline; }
+                  .latest-badge {
+                      background-color: #22c55e;
+                      color: white;
+                      padding: 0.25rem 0.5rem;
+                      border-radius: 9999px;
+                      font-size: 0.875rem;
+                      margin-left: 0.5rem;
+                  }
+              </style>
+              <script>
+                  function formatDate(utcString) {
+                      const date = new Date(utcString);
+                      return date.toLocaleString();
+                  }
+                  window.onload = function() {
+                      document.querySelectorAll('.timestamp').forEach(el => {
+                          el.textContent = formatDate(el.getAttribute('data-utc'));
+                      });
+                  }
+              </script>
+          </head>
+          <body>
+              <div class="container">
+                  <h1>Available Versions</h1>
+                  <table>
+                      <thead>
+                          <tr>
+                              <th>Deployment Date</th>
+                              <th>Version</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+          EOL
           
-          # Create versions index.html
-          cat > versions/index.html << 'EOL'
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Available Versions</title>
-    <style>
-        :root {
-            --primary-color: #2563eb;
-            --background-color: #f8fafc;
-            --text-color: #1e293b;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 2rem;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            margin-top: 0;
-            color: var(--text-color);
-            font-size: 2rem;
-            border-bottom: 2px solid var(--background-color);
-            padding-bottom: 0.5rem;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 1.5rem;
-        }
-
-        th, td {
-            padding: 1rem;
-            text-align: left;
-            border-bottom: 1px solid var(--background-color);
-        }
-
-        th {
-            font-weight: 600;
-            color: var(--text-color);
-        }
-
-        a {
-            color: var(--primary-color);
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 640px) {
-            body {
-                padding: 1rem;
-            }
-            
-            .container {
-                padding: 1rem;
-            }
-
-            th, td {
-                padding: 0.75rem;
-            }
-        }
-    </style>
-    <script>
-        function formatDate(utcDate) {
-            const date = new Date(utcDate);
-            const hours = String(date.getHours()).padStart(2, '0');
-            const minutes = String(date.getMinutes()).padStart(2, '0');
-            const seconds = String(date.getSeconds()).padStart(2, '0');
-            const day = String(date.getDate()).padStart(2, '0');
-            const month = date.toLocaleString('default', { month: 'short' });
-            const year = date.getFullYear();
-            return `${hours}:${minutes}:${seconds}, ${day}-${month}-${year}`;
-        }
-
-        window.onload = function() {
-            const timestamps = document.querySelectorAll('time');
-            timestamps.forEach(time => {
-                const utcDate = time.getAttribute('datetime');
-                time.textContent = formatDate(utcDate);
-            });
-        }
-    </script>
-</head>
-<body>
-    <div class="container">
-        <h1>Available Versions</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Deployment Date</th>
-                    <th>Version</th>
-                </tr>
-            </thead>
-            <tbody>
-EOL
+          # Add new version entry
+          DEPLOY_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          echo "<tr><td class=\"timestamp\" data-utc=\"${DEPLOY_TIME}\"></td><td><a href=\"${{ env.VERSION }}/\">${{ env.VERSION }}</a><span class=\"latest-badge\">Latest</span></td></tr>" >> versions/index.html
           
-          # Add current version
-          echo "<tr><td><time datetime=\"$DEPLOY_DATE\">$DEPLOY_DATE</time></td><td><a href=\"${{ env.VERSION }}/\">${{ env.VERSION }}</a></td></tr>" >> versions/index.html
-          
-          # Add previous versions
-          for d in versions/*/ ; do
-            if [[ "$d" =~ versions/[0-9]+\.[0-9]+\.[0-9]+/$ ]] && [ "$d" != "versions/${{ env.VERSION }}/" ]; then
-              version=$(basename "$d")
-              date=$(stat -c %Y "$d" | xargs -I{} date -u -d @{} +'%Y-%m-%dT%H:%M:%SZ')
-              echo "<tr><td><time datetime=\"$date\">$date</time></td><td><a href=\"$version/\">$version</a></td></tr>" >> versions/index.html
+          # Add previous versions (if any exist)
+          for version_dir in versions/*/; do
+            if [ -d "$version_dir" ] && [ "$version_dir" != "versions/${{ env.VERSION }}/" ]; then
+              version=$(basename "$version_dir")
+              if [ "$version" != "index.html" ] && [ "$version" != "README.md" ]; then
+                deploy_time=$(git log -1 --format="%aI" -- "$version_dir" || date -u +"%Y-%m-%dT%H:%M:%SZ")
+                echo "<tr><td class=\"timestamp\" data-utc=\"${deploy_time}\"></td><td><a href=\"${version}/\">${version}</a></td></tr>" >> versions/index.html
+              fi
             fi
           done
           
-          # Close the HTML file
-          cat >> versions/index.html << 'EOL'
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
-EOL
+          # Close HTML
+          cat >> versions/index.html << EOL
+                      </tbody>
+                  </table>
+              </div>
+          </body>
+          </html>
+          EOL
           
-          # Stage, commit and push
+          # Copy latest version to root
+          cp -r "versions/${{ env.VERSION }}"/* .
+          
+          # Commit and push changes
           git add .
           git commit -m "Deploy version ${{ env.VERSION }}"
-          git push
-      
-      - name: Create deployment summary
+          git push origin gh-pages
+
+      - name: Deployment Summary
         run: |
           echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
           echo "✅ Successfully deployed version ${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
-          echo "📱 Root URL (latest version): https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/" >> $GITHUB_STEP_SUMMARY
-          echo "📱 Versioned URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/versions/${{ env.VERSION }}/" >> $GITHUB_STEP_SUMMARY
-          echo "📋 All versions: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/versions/" >> $GITHUB_STEP_SUMMARY
+          echo "📱 Latest version: https://${{ github.repository_owner }}.github.io/" >> $GITHUB_STEP_SUMMARY
+          echo "📱 Versioned URL: https://${{ github.repository_owner }}.github.io/versions/${{ env.VERSION }}/" >> $GITHUB_STEP_SUMMARY
+          echo "📋 All versions: https://${{ github.repository_owner }}.github.io/versions/index.html" >> $GITHUB_STEP_SUMMARY
